fix the alignment of the utility row

--- a/public/css/_utility-row.sass
+++ b/public/css/_utility-row.sass
@@ -1,5 +1,8 @@
 .utility-row
   z-index: 100
+
+  .col-sm-8
+    padding-top: 1px
   
   .fa
     margin: 0 6px
